bk_ida/gccida/c0/ix86_expand_fp_movcc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8886:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8887:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v3; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8906:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+8Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8934:27: error: use of undeclared identifier 'machine_mode'
*operandsa = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), *operandsa); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8934:42: error: expected expression
*operandsa = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), *operandsa); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8936:20: error: use of undeclared identifier 'machine_mode'
op0 = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), op0); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8936:35: error: expected expression
op0 = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), op0); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8947:27: error: use of undeclared identifier 'machine_mode'
*operandsa = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), *operandsa); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8947:42: error: expected expression
*operandsa = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), *operandsa); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8949:20: error: use of undeclared identifier 'machine_mode'
op0 = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), op0); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8949:35: error: expected expression
op0 = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa), op0); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8963:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v2 = swap_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)operandsa[1]); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8963:35: error: expected expression
v2 = swap_condition( ( rtx_code)( unsigned __int16)*( _DWORD *)operandsa[1]); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8973:43: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v3 = reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)*( _DWORD *)operandsa[1]); 
                                          ^~~~~~~~
                                          rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8973:54: error: expected expression
v3 = reverse_condition_maybe_unordered( ( rtx_code)( unsigned __int16)*( _DWORD *)operandsa[1]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8997:22: error: use of undeclared identifier 'machine_mode'
tmp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:8997:37: error: expected expression
tmp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa)); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:9003:22: error: use of undeclared identifier 'machine_mode'
tmp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa)); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/i386.c:9003:37: error: expected expression
tmp = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)*operandsa)); 
                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_expand_fp_movcc/src/obj/i386.o] Error 1
